Nextflow: auto building containers init test

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,11 @@
 //nextflow.config
 nextflow.enable.dsl=2
-includeConfig 'configs/base.config'
+
+//=============================================================================
+// PARAMS
+//=============================================================================
+params {
+    containerDir = "${baseDir}/containers"
+    containerCache = "${baseDir}/container_cache"
+}
+
