Docker: autobuild docker images if not present in container_cache - tested for docker only

--- a/configs/run.config
+++ b/configs/run.config
@@ -32,7 +32,7 @@ resume  = true
 singularity {
     enabled    = true
     autoMounts = true
-    cacheDir   = '/scratch/$USER/.singularity_cache'
+    cacheDir   = '/scratch/$USER/container_cache'
 }
 
 // --- Reporting ---
