--- a/configs/smoke.config
+++ b/configs/smoke.config
@@ -24,7 +24,7 @@ resume  = true
 singularity {
     enabled    = true
     autoMounts = true
-    cacheDir   = './.singularity_cache'  // local cache for Singularity images
+    cacheDir   = './container_cache'  // local cache for Singularity images
 }
 
 
@@ -32,19 +32,22 @@ singularity {
 timeline {
     enabled = true
     file    = 'logs/timeline.html'
+    overwrite = true
 }
 
 report {
     enabled = true
     file    = 'logs/report.html'
+    overwrite = true
 }
 
 trace {
     enabled = true
     file    = 'logs/trace.txt'
+    overwrite = true
 }
 
 dag {
-    enabled = true
+    enabled = false
     file    = 'logs/dag.png'
 }
