Container build: tested for mac docker images and linux apptatiner

--- a/configs/run.config
+++ b/configs/run.config
@@ -6,9 +6,10 @@ process {
     executor = 'slurm'
     queue    = 'defq'
     cpus     = 1
-    memory   = '8 GB'
+    memory   = '16 GB'
     time     = '24h'
     scratch  = true
+    clusterOptions = '--nodelist=esplhpc-cp047'
 
     // GPU label
     withLabel: gpu {
@@ -25,33 +26,37 @@ executor {
     pollInterval    = '60 sec'
 }
 
-workDir = '/scratch/$USER/nextflow_work'
+workDir = './work'
 cleanup = true
 resume  = true
 
 singularity {
     enabled    = true
     autoMounts = true
-    cacheDir   = '/scratch/$USER/container_cache'
+    cacheDir   = './container_cache'
 }
 
 // --- Reporting ---
 timeline {
     enabled = true
     file    = 'logs/timeline.html'
+    overwrite = true
 }
 
 report {
     enabled = true
     file    = 'logs/report.html'
+    overwrite = true
 }
 
 trace {
     enabled = true
     file    = 'logs/trace.txt'
+    overwrite = true
 }
 
 dag {
     enabled = true
     file    = 'logs/dag.png'
+    overwrite = true
 }
