base cell process

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,5 +7,19 @@ nextflow.enable.dsl=2
 params {
     containerDir = "${baseDir}/containers"
     containerCache = "${baseDir}/container_cache"
+    
+    // Base cell parameters
+    zarrCache = "${baseDir}/zarr_cache"
+    zarrStore = "${params.zarrCache}/base_cell_cellxgene.zarr"
+    baseCellCommand = "init"
+    baseCellAtlas = "cellxgene"
+    baseCellOrganism = "mus_musculus"
+    baseCellKeepAll = false
+    baseCellMaxChunkSize = 5000
+    baseCellMinChunkSize = 1000
+    baseCellDistanceMetrics = null  // null means use all available
+    baseCellOutput = "${params.zarrCache}/base_cell_heatmap.png"  // Default plot output path
+    baseCellMaxGenes = null
+    baseCellMaxCellTypes = null
 }
 
