--- a/nextflow.config
+++ b/nextflow.config
@@ -9,17 +9,16 @@ params {
     containerCache = "${baseDir}/container_cache"
     
     // Base cell parameters
-    zarrCache = "${baseDir}/zarr_cache"
-    zarrStore = "${params.zarrCache}/base_cell_cellxgene.zarr"
-    baseCellCommand = "init"
+    baseCellOutput = "${baseDir}/report"
+    zarrStore = "base_cell_cellxgene.zarr"
+    plot_out = "plots/"
     baseCellAtlas = "cellxgene"
     baseCellOrganism = "mus_musculus"
     baseCellKeepAll = false
     baseCellMaxChunkSize = 5000
     baseCellMinChunkSize = 1000
-    baseCellDistanceMetrics = null  // null means use all available
-    baseCellOutput = "${params.zarrCache}/base_cell_heatmap.png"  // Default plot output path
-    baseCellMaxGenes = null
-    baseCellMaxCellTypes = null
+    baseCellDistanceMetrics = "wasserstein"
+    baseCellMaxGenes = 20000
+    baseCellMaxCellTypes = 400
 }
 
